--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-    "name": "walletz",
-    "version": "1.0.0",
-    "description": "Solana wallet integration for React/Next.js",
-    "main": "dist/index.cjs.js",
-    "module": "dist/index.esm.js",
-    "types": "dist/index.d.ts",
-    "scripts": {
-      "build": "tsc && rollup -c",
-      "test": "jest --passWithNoTests",
-      "lint": "eslint .",
-      "prepublishOnly": "npm run build"
-    },
-    "keywords": [
-      "solana",
-      "wallet",
-      "react",
-      "nextjs"
-    ],
-    "license": "MIT",
-    "peerDependencies": {
-      "react": "^18.0.0"
-    },
-    "devDependencies": {
-      "@types/react": "^18.0.17",
-      "rollup": "^3.0.0",
-      "typescript": "^4.9.3",
-      "eslint": "^8.0.0",
-      "jest": "^29.2.0"
-    }
+  "name": "walletz",
+  "version": "1.0.0",
+  "description": "Solana wallet integration for React/Next.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc && rollup -c",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint .",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "solana",
+    "wallet",
+    "react",
+    "nextjs"
+  ],
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/react": "^18.0.17",
+    "eslint": "^8.0.0",
+    "jest": "^29.2.0",
+    "postcss": "^8.5.1",
+    "rollup": "^3.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^4.9.3"
   }
-  
+}
